tests/errors/invalid_cast.ne
function main(): int32
{
    var intVar: int8 = 123;
    var stringVar: string = to<string>(intVar);
    return 0;
}
